# memo

./: .gitignore  Cargo.toml  README.md  run_tests.sh
src/: context.rs  display.rs  error.rs  front_matter.rs  frontmatter.rs  lib.rs  main.rs  memo.rs  memo_id.rs  repository.rs
src/commands/: add.rs  archive.rs  dir.rs  edit.rs  index.rs  list.rs  migrate.rs  mod.rs  search.rs  show.rs  tags.rs  template.rs
src/search/: index.rs  japanese_tokenizer.rs  lock.rs  mod.rs
src/utils/: editor.rs  id_resolver.rs  mod.rs  xdg.rs
tests/: archive_tests.rs  frontmatter_integration_test.rs  frontmatter_test.rs  integration_test.sh  integration_tests.rs  lib.rs  show_tests.rs
tests/commands/: add_tests.rs  archive_tests.rs  dir_tests.rs  edit_tests.rs  index_tests.rs  list_tests.rs  mod.rs  search_tests.rs  show_tests.rs
tests/utils/: test_helpers.rs
