[package]
name = "memo"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.42", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_yaml = "0.9.34"
tantivy = "0.24"
fs2 = "0.4"

[dev-dependencies]
tempfile = "3.20.0"
