[package]
name = "memo"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tantivy = "0.25"
fs2 = "0.4"
lindera = { version = "2.3.4", features = ["embed-ipadic"] }

[dev-dependencies]
tempfile = "3.27.0"
